# planning-fd_uniform

./: CMakeLists.txt  build  manifest.xml  plan
src/: CMakeLists.txt  VERSION  plan  plan-ipc
src/preprocess/: preprocess
src/search/: downward-seq-sat-uniform.py
src/search/merge_and_shrink/: abstraction.cc
